force-app/main/default/objects/redwing__Training_Plan_Section__c/redwing__Training_Plan_Section__c.object-meta.xml
<CustomObject>
    <label>Learning Plan Section</label>
    <nameField>
        <label>Learning Plan Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Plan Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>