force-app/main/default/objects/redwing__Training_Plan_Section__c/fields/redwing__Description__c.field-meta.xml
<CustomField>
    <fullName>redwing__Description__c</fullName>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>