force-app/main/default/objects/redwing__Training_Plan_Section__c/fields/redwing__Optional__c.field-meta.xml
<CustomField>
    <fullName>redwing__Optional__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option if you plan to make all the items under this section optional</inlineHelpText>
    <label>Optional</label>
    <type>Checkbox</type>
</CustomField>