force-app/main/default/objects/redwing__Training_Plan_Section__c/fields/redwing__Total_Section_Items__c.field-meta.xml
<CustomField>
    <fullName>redwing__Total_Section_Items__c</fullName>
    <label>Total Section Items</label>
    <summaryFilterItems>
        <field>redwing__Training_Plan_Section_Item__c.redwing__Removed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>redwing__Training_Plan_Section_Item__c.redwing__Training_Plan_Section__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>